--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,7 @@
     font-family: 'Montserrat';
     font-size: 1.5vmin;
     font-weight: 500;
+    text-decoration: none;
 }
 body{
     padding: 1rem 10%;
